add: Actualize changes

--- a/plan.org
+++ b/plan.org
@@ -8,7 +8,7 @@
 - [[#краткое-описание-объекта][Краткое описание объекта]]
 - [[#общий-план-ремонта][Общий план ремонта]]
   - [[#1-подготовка-и-демонтаж-35-дней][1. Подготовка и демонтаж (3–5 дней)]]
-  - [[#2-подготовка-стен-35-дней][2. Подготовка стен (3–5 дней)]]
+  - [[#2-построение-стены-35-дней][2. Построение стены (3–5 дней)]]
   - [[#3-возведение-новых-стен-санузла-34-дня][3. Возведение новых стен санузла (3–4 дня)]]
   - [[#4-черновая-электропроводка-35-дней][4. Черновая электропроводка (3–5 дней)]]
   - [[#5-водоснабжение-и-канализация-23-дня][5. Водоснабжение и канализация (2–3 дня)]]
@@ -26,22 +26,21 @@
 * Требуемые услуги
 
 - Демонтаж внутренних стен и старых покрытий
-- Заделка трещин и швов на наружных стенах
-- Выравнивание и штукатурка стен
+- Построение гиспокартоновой стены
 - Прокладка новой электропроводки
 - Установка сантехники и бойлера
 - Монтаж тёплого пола и укладка плитки в санузле
 
 * Важные условия сотрудничества
 
-- Опыт работы с кварцвинилом и ротбандом
+- Опыт работы с кварцвинилом
 - Фиксированная цена за работу (не почасовая оплата)
 - Гарантия на все работы, особенно на электромонтаж и сантехнические работы
 - Вывоз мусора
 
 * Краткое описание объекта
 
-Квартира площадью 27.7кв\м2 расположена на 3м этаже и находится на [[https://maps.app.goo.gl/fHZNWoGEtHksWi3w8][улице Рузвелтова]], подъём осуществляется по внешней бетонной лестнице, лифта нет.
+Квартира площадью 24кв\м2 расположена на 2м этаже и находится на [[https://maps.app.goo.gl/fHZNWoGEtHksWi3w8][улице Рузвелтова]], подъём осуществляется по внешней бетонной лестнице, лифта нет.
 
 * Общий план ремонта
 
@@ -55,11 +54,9 @@
 - Установка новой входной двери
 - Вывоз строительного мусора
 
-** 2. Подготовка стен (3–5 дней)
+** 2. Построение стены (3–5 дней)
 
 - Расшивка и заделка трещин на наружных стенах
-- Грунтовка стен и заделка глубоких дефектов шпатлёвкой
-- Выравнивание стен ротбандом
 
 ** 3. Возведение новых стен санузла (3–4 дня)
 
@@ -72,13 +69,11 @@
 
 - Монтаж новых кабелей и электрощитка
 - Установка подрозетников, выключателей и точек освещения
-- Разводка слаботочных систем (интернет, сигнализация)
 - Проверка работоспособности всей системы
 
 ** 5. Водоснабжение и канализация (2–3 дня)
 
-- Прокладка труб для умывальника, душа, унитаза, стиральной машины и мойки
-- Установка и подключение бойлера
+- Прокладка труб для умывальника, душа, унитаза, стиральной машины
 - Проверка системы на герметичность
 
 ** 6. Подготовка пола (3–5 дней)
@@ -90,7 +85,6 @@
 
 ** 7. Отделка стен и полов (7–10 дней)
 
-- Финишная шпатлёвка стен ротбандом
 - Покраска стен латексной краской
 - Облицовка стен в санузле крупноформатным керамогранитом
 - Покраска потолка и стен в санузле
@@ -101,7 +95,6 @@
 
 - Монтаж межкомнатной двери в санузел
 - Установка унитаза, раковины, смесителей
-- Подключение и проверка бойлера
 - Установка выключателей, розеток и осветительных приборов
 
 ** 9. Финальная уборка и подготовка к меблировке (2–3 дня)
@@ -116,17 +109,15 @@
 
 ** Черновые материалы
 
-- *Ротбанд (гипсовая штукатурка)* 8–10 мешков (по 30 кг) /Для выравнивания стен (толщина слоя ≈ 3-5 мм)/
 - *Грунтовка глубокого проникновения* 10 л /Для подготовки стен перед шпаклёвкой и укладкой плитки/
 - *Гидроизоляция для санузла* 5–7 кг /Под плитку на пол и стены во влажных зонах/
-- *Штукатурная сетка* 15–20 м² /Для армирования трещин на наружных стенах/
 - *Монтажный клей (для пеноблоков)* 2–3 мешка по 25 кг /Для кладки новых стен санузла/
 - *Саморезы, дюбели, уголки для монтажа стен*
 
 ** Чистовые материалы
 
 - *Краска латексная моющаяся* 10 л (2-3 банки) /Для стен/
-- *Керамогранит крупноформатный* 8–10 м² (санузел) /Рекомендуется заказывать с запасом 10–15%/
+- *Керамогранит крупноформатный* 8–10 м² (санузел)
 - *Плиточный клей* 3 мешка по 25 кг /Для укладки керамогранита/
 - *Кварцвинил* 30 м² /С учётом запаса на подрезку/
 
