--- a/plan.org
+++ b/plan.org
@@ -7,15 +7,16 @@
 - [[#важные-условия-сотрудничества][Важные условия сотрудничества]]
 - [[#краткое-описание-объекта][Краткое описание объекта]]
 - [[#общий-план-ремонта][Общий план ремонта]]
-  - [[#1-подготовка-и-демонтаж-35-дней][1. Подготовка и демонтаж (3–5 дней)]]
-  - [[#2-построение-стены-35-дней][2. Построение стены (3–5 дней)]]
-  - [[#3-возведение-новых-стен-санузла-34-дня][3. Возведение новых стен санузла (3–4 дня)]]
-  - [[#4-черновая-электропроводка-35-дней][4. Черновая электропроводка (3–5 дней)]]
-  - [[#5-водоснабжение-и-канализация-23-дня][5. Водоснабжение и канализация (2–3 дня)]]
-  - [[#6-подготовка-пола-35-дней][6. Подготовка пола (3–5 дней)]]
-  - [[#7-отделка-стен-и-полов-710-дней][7. Отделка стен и полов (7–10 дней)]]
-  - [[#8-установка-дверей-сантехники-и-электрооборудования-35-дней][8. Установка дверей, сантехники и электрооборудования (3–5 дней)]]
-  - [[#9-финальная-уборка-и-подготовка-к-меблировке-23-дня][9. Финальная уборка и подготовка к меблировке (2–3 дня)]]
+  - [[#подготовка-и-демонтаж-35-дней][Подготовка и демонтаж (3–5 дней)]]
+  - [[#построение-стены-35-дней][Построение стены (3–5 дней)]]
+  - [[#возведение-новых-стен-санузла-34-дня][Возведение новых стен санузла (3–4 дня)]]
+  - [[#черновая-электропроводка-35-дней][Черновая электропроводка (3–5 дней)]]
+  - [[#водоснабжение-и-канализация-23-дня][Водоснабжение и канализация (2–3 дня)]]
+  - [[#подготовка-пола-35-дней][Подготовка пола (3–5 дней)]]
+  - [[#замена-окна][Замена окна]]
+  - [[#отделка-стен-и-полов-710-дней][Отделка стен и полов (7–10 дней)]]
+  - [[#установка-дверей-сантехники-и-электрооборудования-35-дней][Установка дверей, сантехники и электрооборудования (3–5 дней)]]
+  - [[#финальная-уборка-и-подготовка-к-меблировке-23-дня][Финальная уборка и подготовка к меблировке (2–3 дня)]]
 - [[#строительные-материалы][Строительные материалы]]
   - [[#черновые-материалы][Черновые материалы]]
   - [[#чистовые-материалы][Чистовые материалы]]
@@ -44,7 +45,7 @@
 
 * Общий план ремонта
 
-** 1. Подготовка и демонтаж (3–5 дней)
+** Подготовка и демонтаж (3–5 дней)
 
 - Демонтаж старых стен санузла
 - Удаление старого покрытия стен
@@ -54,36 +55,41 @@
 - Установка новой входной двери
 - Вывоз строительного мусора
 
-** 2. Построение стены (3–5 дней)
+** Построение стены (3–5 дней)
 
 - Расшивка и заделка трещин на наружных стенах
 
-** 3. Возведение новых стен санузла (3–4 дня)
+** Возведение новых стен санузла (3–4 дня)
 
 - Кладка новых перегородок из пеноблоков или ГКЛ
 - Монтаж дверной коробки
 - Грунтовка и армирование швов
 - Подготовка поверхности к финишной отделке
 
-** 4. Черновая электропроводка (3–5 дней)
+** Черновая электропроводка (3–5 дней)
 
 - Монтаж новых кабелей и электрощитка
 - Установка подрозетников, выключателей и точек освещения
 - Проверка работоспособности всей системы
 
-** 5. Водоснабжение и канализация (2–3 дня)
+** Водоснабжение и канализация (2–3 дня)
 
 - Прокладка труб для умывальника, душа, унитаза, стиральной машины
 - Проверка системы на герметичность
 
-** 6. Подготовка пола (3–5 дней)
+** Подготовка пола (3–5 дней)
 
 - Гидроизоляция санузла
 - Выравнивание пола (при необходимости)
 - Укладка тёплого пола в санузле
 - Подготовка основания под кварцвинил
 
-** 7. Отделка стен и полов (7–10 дней)
+** Замена окна
+
+- Демонтаж существующего окан
+- Установка нового окна, открывающееся наружу
+
+** Отделка стен и полов (7–10 дней)
 
 - Покраска стен латексной краской
 - Облицовка стен в санузле крупноформатным керамогранитом
@@ -91,13 +97,13 @@
 - Укладка кварцвинила
 - Монтаж плинтусов
 
-** 8. Установка дверей, сантехники и электрооборудования (3–5 дней)
+** Установка дверей, сантехники и электрооборудования (3–5 дней)
 
 - Монтаж межкомнатной двери в санузел
 - Установка унитаза, раковины, смесителей
 - Установка выключателей, розеток и осветительных приборов
 
-** 9. Финальная уборка и подготовка к меблировке (2–3 дня)
+** Финальная уборка и подготовка к меблировке (2–3 дня)
 
 - Генеральная уборка помещения
 - Проверка всех систем
