--- a/serbian.org
+++ b/serbian.org
@@ -1,4 +1,4 @@
-#+title: План реновирања студија
+#+title: План реновирања гарсоњере
 #+author: Андреј
 #+latex_header: \usepackage[english, russian]{babel}
 
@@ -7,97 +7,103 @@
 - [[#важни-услови-сарадње][Важни услови сарадње]]
 - [[#кратак-опис-објекта][Кратак опис објекта]]
 - [[#општи-план-реновирања][Општи план реновирања]]
-  - [[#1-припрема-и-демонтажа-35-дана][1. Припрема и демонтажа (3–5 дана)]]
-  - [[#2-изградња-зида-35-дана][2. Изградња зида (3–5 дана)]]
-  - [[#3-изградња-нових-зидова-купатила-34-дана][3. Изградња нових зидова купатила (3–4 дана)]]
-  - [[#4-груба-електроинсталација-35-дана][4. Груба електроинсталација (3–5 дана)]]
-  - [[#5-водовод-и-канализација-23-дана][5. Водовод и канализација (2–3 дана)]]
-  - [[#6-припрема-пода-35-дана][6. Припрема пода (3–5 дана)]]
-  - [[#7-обрада-зидова-и-подова-710-дана][7. Обрада зидова и подова (7–10 дана)]]
-  - [[#8-уградња-врата-санитарија-и-електроопреме-35-дана][8. Уградња врата, санитарија и електроопреме (3–5 дана)]]
-  - [[#9-финално-чишћење-и-припрема-за-намештај-23-дана][9. Финално чишћење и припрема за намештај (2–3 дана)]]
+  - [[#припрема-и-демонтажа-35-дана][Припрема и демонтажа (3–5 дана)]]
+  - [[#постављање-зида-35-дана][Постављање зида (3–5 дана)]]
+  - [[#изградња-нових-зидова-купатила-34-дана][Изградња нових зидова купатила (3–4 дана)]]
+  - [[#груба-електроинсталација-35-дана][Груба електроинсталација (3–5 дана)]]
+  - [[#водовод-и-канализација-23-дана][Водовод и канализација (2–3 дана)]]
+  - [[#припрема-пода-35-дана][Припрема пода (3–5 дана)]]
+  - [[#замена-прозора][Замена прозора]]
+  - [[#обрада-зидова-и-подова-710-дана][Обрада зидова и подова (7–10 дана)]]
+  - [[#уградња-врата-санитарија-и-електроопреме-35-дана][Уградња врата, санитарија и електроопреме (3–5 дана)]]
+  - [[#коначно-чишћење-и-припрема-за-уређење-23-дана][Коначно чишћење и припрема за уређење (2–3 дана)]]
 - [[#грађевински-материјали][Грађевински материјали]]
   - [[#груби-материјали][Груби материјали]]
-  - [[#фини-материјали][Фини материјали]]
+  - [[#завршни-материјали][Завршни материјали]]
   - [[#електроопрема][Електроопрема]]
-- [[#прилог][Прилог]]
-  - [[#финални-макет][Финални макет]]
+- [[#додатак][Додатак]]
+  - [[#коначни-макет][Коначни макет]]
 
 * Потребне услуге
 
-- Демонтажа унутрашњих зидова и старих премаза
-- Изградња гиспокартонског зида
-- Постављање нове електроинсталације
+- Демонтажа унутрашњих зидова и старих облога
+- Постављање зида од гипсаних плоча
+- Провлачење нове електроинсталације
 - Уградња санитарија и бојлера
 - Монтажа подног грејања и постављање плочица у купатилу
 
 * Важни услови сарадње
 
 - Искуство у раду са кварц винилом
-- Фиксна цена за рад (не плаћање по сату)
-- Гаранција на све радове, посебно на електроинсталације и санитарне радове
-- Изношење смећа
+- Фиксна цена за посао (не плаћање по сату)
+- Гаранција на све радове, посебно на електромонтажу и санитарне радове
+- Одвоз смећа
 
 * Кратак опис објекта
 
-Стан површине 24м2 се налази на 2. спрату и налази се на [[https://maps.app.goo.gl/fHZNWoGEtHksWi3w8][улици Рузвелтова]], приступ је спољним бетонским степеништем, нема лифта.
+Стан површине 24м2 се налази на 2. спрату и налази се на [[https://maps.app.goo.gl/fHZNWoGEtHksWi3w8][улици Рузвелтова]], приступ је спољним бетонским степеницама, нема лифта.
 
 * Општи план реновирања
 
-** 1. Припрема и демонтажа (3–5 дана)
+** Припрема и демонтажа (3–5 дана)
 
 - Демонтажа старих зидова купатила
-- Уклањање старог премаза зидова
+- Уклањање старе облоге зидова
 - Демонтажа старе подне облоге
-- Демонтажа санитарија и електроинсталација
+- Демонтажа санитарија и електроинсталације
 - Демонтажа старих улазних врата
-- Уградња нових улазних врата
-- Изношење грађевинског шута
+- Постављање нових улазних врата
+- Одвоз грађевинског отпада
 
-** 2. Изградња зида (3–5 дана)
+** Постављање зида (3–5 дана)
 
-- Ширење и затварање пукотина на спољним зидовима
+- Проширење и заптивање пукотина на спољним зидовима
 
-** 3. Изградња нових зидова купатила (3–4 дана)
+** Изградња нових зидова купатила (3–4 дана)
 
-- Зидање нових преградних зидова од пеноблокова или ГКЛ
+- Зидање нових преграда од гасних блокова или ГКЛ
 - Монтажа оквира врата
 - Грундирање и армирање шавова
 - Припрема површине за завршну обраду
 
-** 4. Груба електроинсталација (3–5 дана)
+** Груба електроинсталација (3–5 дана)
 
 - Монтажа нових каблова и електричног ормара
-- Уградња разводних кутија, прекидача и места за осветљење
+- Уградња кутија за утичнице, прекидача и места за осветљење
 - Провера функционалности целог система
 
-** 5. Водовод и канализација (2–3 дана)
+** Водовод и канализација (2–3 дана)
 
-- Постављање цеви за умиваоник, туш, тоалет, машину за прање веша
+- Провлачење цеви за умиваоник, туш, тоалет, машину за прање веша
 - Провера система на непропусност
 
-** 6. Припрема пода (3–5 дана)
+** Припрема пода (3–5 дана)
 
 - Хидроизолација купатила
-- Равнање пода (ако је потребно)
+- Нивелисање пода (ако је потребно)
 - Постављање подног грејања у купатилу
 - Припрема подлоге за кварц винил
 
-** 7. Обрада зидова и подова (7–10 дана)
+** Замена прозора
 
-- Кречење зидова латекс бојом
-- Облагање зидова у купатилу великим гранитним плочицама
+- Демонтажа постојећег прозора
+- Уградња новог прозора који се отвара споља
+
+** Обрада зидова и подова (7–10 дана)
+
+- Кречење зидова латекс фарбом
+- Облагање зидова у купатилу великим керамичким плочицама
 - Кречење плафона и зидова у купатилу
 - Постављање кварц винила
 - Монтажа лајсни
 
-** 8. Уградња врата, санитарија и електроопреме (3–5 дана)
+** Уградња врата, санитарија и електроопреме (3–5 дана)
 
-- Монтажа унутрашњих врата у купатило
+- Монтажа унутрашњих врата у купатилу
 - Уградња тоалета, лавабоа, славина
 - Уградња прекидача, утичница и расветних тела
 
-** 9. Финално чишћење и припрема за намештај (2–3 дана)
+** Коначно чишћење и припрема за уређење (2–3 дана)
 
 - Генерално чишћење просторије
 - Провера свих система
@@ -105,34 +111,34 @@
 
 * Грађевински материјали
 
-*Списак материјала са оријентационим количинама* / Приближне процене, потребно је прецизирање на објекту
+*Списак материјала са оквирном количином* / Приближни прорачуни, потребно је прецизирање на лицу места
 
 ** Груби материјали
 
 - *Грунд дубоке пенетрације* 10 л /За припрему зидова пре шпакловке и постављања плочица/
 - *Хидроизолација за купатило* 5–7 кг /Испод плочица на поду и зидовима у влажним зонама/
-- *Монтажни лепак (за пеноблокове)* 2–3 вреће по 25 кг /За зидање нових зидова купатила/
-- *Шрафови, типли, углови за монтажу зидова*
+- *Монтажни лепак (за гасне блокове)* 2–3 вреће по 25 кг /За зидање нових зидова купатила/
+- *Шрафови, типлови, углови за монтажу зидова*
 
-** Фини материјали
+** Завршни материјали
 
-- *Латекс боја која се пере* 10 л (2-3 канте) /За зидове/
-- *Керамички гранит великог формата* 8–10 м² (купатило)
-- *Лепак за плочице* 3 вреће по 25 кг /За постављање керамичког гранита/
-- *Кварц винил* 30 м² /Укључујући резерву за сечење/
+- *Латекс фарба за прање* 10 л (2-3 канте) /За зидове/
+- *Керамичке плочице великог формата* 8–10 м² (купатило)
+- *Лепак за плочице* 3 вреће по 25 кг /За постављање керамичких плочица/
+- *Кварц винил* 30 м² /Са урачунатим резервама за сечење/
 
 ** Електроопрема
 
 - *Кабл ВВГ 3×2.5* 40 м /За утичнице/
 - *Кабл ВВГ 3×1.5* 20 м /За осветљење/
-- *Разводне кутије* 15 ком
+- *Кутије за утичнице* 15 ком
 - *Утичнице и прекидачи* 10–12 ком
 - *Разводна табла са осигурачима* 1 ком
 - *ЛЕД осветљење*
 
-* Прилог
+* Додатак
 
-** Финални макет
+** Коначни макет
 :PROPERTIES:
 :ID:       09ebdaf9-5ff1-4c24-85ed-57d50092dd03
 :END:
